Fix for OPENAM-3831 - review: FR-205